# cpp-fastconnect

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  third-party-notices.txt  vcpkg.json
include/fastconnect/: _exports.h  cancellation_token.h  fastconnect_client_config.h  fcdata_api_client.h  fcdata_stream_client.h  fctrading_api_client.h  fctrading_stream_client.h  http_client.h
samples/fastconnectsample/: CMakeLists.txt  fcdata_api_sample.cpp  fcdata_stream_sample.cpp  fctrading_api_sample.cpp  fctrading_stream_sample.cpp
src/fastconnect/: CMakeLists.txt  base64.cpp  default_http_client.cpp  default_http_client.h  fcdata_api_client.cpp  fcdata_stream_client.cpp  fctrading_api_client.cpp  fctrading_stream_client.cpp  ssi-fastconnect-config.in.cmake  util.cpp  util.h
third_party_code/: CMakeLists.txt
third_party_code/cpprestsdk/: uri.cpp  uri_builder.cpp
third_party_code/signalrclient/: CMakeLists.txt
third_party_code/signalrclient/include/signalrclient/: hub_connection.h  hub_connection_builder.h
third_party_code/signalrclient/src/signalrclient/: CMakeLists.txt  connection_impl.cpp  connection_impl.h  constants.h  handshake_protocol.cpp  http_sender.cpp  http_sender.h  hub_connection.cpp  hub_connection_builder.cpp  hub_connection_impl.cpp  hub_connection_impl.h  json_helpers.cpp  json_helpers.h  json_hub_protocol.cpp  microsoft-signalr-config.in.cmake  negotiate.cpp  negotiate.h  negotiation_response.h  request_sender.cpp  request_sender.h  trace_log_writer.cpp  url_builder.cpp
third_party_code/signalrclient/test/: CMakeLists.txt
